Fixes select all button on mobile

--- a/resources/css/components/_form.scss
+++ b/resources/css/components/_form.scss
@@ -344,6 +344,6 @@
     {
         display: inline-block;
         text-align: left;
-        width: 5.388888888888889rem;
+        width: 5.488888888888889rem;
     }
 }
